--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Tree Sitter Visualizer</title>
+  <title>Tree Sitter Visualizer: Visualize syntax tree of 80+ languages entirely in browser</title>
 </head>
 
 <body>
